@startuml
hide circle
skinparam classAttributeIconSize 0

title Modelo de Base de Datos - ERP TRIBUTARIO NEIVA (tabla factura actualizada)

class usuario {
  +PK id_usuario : int
  nombre : varchar
  correo : varchar
  contrasena : varchar
  estado : boolean <<Ej: true / false>>
  FK id_rol : int
}

class rol {
  +PK id_rol : int
  nombre : varchar <<Ej: 'Superadmin', 'Contribuyente', 'EntidadPublica'>>
}

class contribuyente {
  +PK id_contribuyente : int
  tipo_documento : varchar <<Ej: 'CC', 'NIT', 'CE'>>
  numero_documento : varchar
  nombre_completo : varchar
  direccion : varchar
  telefono : varchar
  correo : varchar
  FK id_tipo_contribuyente : int
}

class tipo_contribuyente {
  +PK id_tipo_contribuyente : int
  descripcion : varchar <<Ej: 'Natural', 'Jurídico'>>
}

class tipo_tributo {
  +PK id_tipo_tributo : int
  nombre : varchar <<Ej: 'Predial', 'ICA', 'Multa Tránsito'>>
  descripcion : varchar
  base_calculo : decimal
  tarifa : decimal
  periodicidad : varchar <<Ej: 'Mensual', 'Trimestral', 'Anual'>>
}

class factura {
  +PK id_factura : int
  FK id_contribuyente : int
  FK id_tipo_tributo : int
  periodo : varchar <<Ej: '2024-01', '2024-T1'>>
  valor_estimado : decimal
  estado : varchar <<Ej: 'Pendiente', 'Pagado', 'Vencido'>>
}

class detalle_factura {
  +PK id_detalle : int
  concepto : varchar <<Ej: 'Pago Predial 2024', 'ICA T1'>>
  periodo : varchar
  valor : decimal
}

class actividad_economica {
  +PK id_actividad : int
  nombre : varchar <<Ej: 'Comercio al por menor'>>
  codigo : varchar <<Ej: 'G4711'>>
}

class contribuyente_actividad {
  +PK id_relacion : int
  FK id_contribuyente : int
  FK id_actividad : int
}

class auditoria {
  +PK id_auditoria : int
  FK id_usuario : int
  fecha : datetime
  accion : varchar <<Ej: 'INSERT', 'UPDATE', 'DELETE'>>
  descripcion : text
}

usuario --> rol : id_rol\n[1..1]
contribuyente --> tipo_contribuyente : id_tipo_contribuyente\n[1..1]
factura --> contribuyente : id_contribuyente\n[1..1]
detalle_factura --> factura : id_factura\n[1..1]
factura --> tipo_tributo : id_tipo_tributo\n[1..1]
contribuyente_actividad --> contribuyente : id_contribuyente\n[1..1]
contribuyente_actividad --> actividad_economica : id_actividad\n[1..1]
auditoria --> usuario : id_usuario\n[1..1]

@enduml